Motivo, Denuncia, usuario

--- a/denunciasapi/.env.example
+++ b/denunciasapi/.env.example
@@ -3,8 +3,10 @@ PORT=8000
 
 # DB
 DATABASE_TYPE='postgres'
-DATABASE_USER='dantezz'
-DATABASE_PASS='natasha2150_'
+DATABASE_USER='myuser'
+DATABASE_PASS='1234'
+#DATABASE_USER='dantezz'
+#DATABASE_PASS='natasha2150_'
 DATABASE_HOST='localhost'
 DATABASE_NAME='denunciasdb'
 DATABASE_PORT=5432
