--- a/denunciasapp/pubspec.yaml
+++ b/denunciasapp/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   go_router: ^10.1.0
+  dio: ^5.3.2
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
